# Platform

./: .gitignore  CMakeLists.txt  manifest.json
application/: adas.cpp  navigation.cpp
application/adas/: blind_spot_detection.cpp  collision_avoidance.cpp  main.cpp
application/navigation/: main.cpp  map_rendering.cpp  route_guidance.cpp
docs/: README.md  architecture.md  build.md  commands.md  sdk.md  현재 문제점.md
src/: FeatureProfile.h  ManifestLoader.cpp  ManifestLoader.h  ProcessRecord.h  ProcessSupervisor.cpp  ProcessSupervisor.h  ProcessSupervisorFeature.cpp  ProcessSupervisorKill.cpp  SdvAppFrame.cpp  ShmManager.cpp  ShmManager.h  Watchdog.cpp  Watchdog.h  main.cpp
src/sdk/: Feature.cpp  Feature.h  SdvAppFrame.cpp  SdvAppFrame.h
src/supervisor/: FeatureProfile.h  ManifestLoader.cpp  ProcessRecord.h  ProcessSupervisor.cpp  ProcessSupervisor.h  ProcessSupervisorFeature.cpp  ProcessSupervisorKill.cpp  Watchdog.cpp  main.cpp
